--- a/src/SmartHopper.Config/Properties/providersResources.resx
+++ b/src/SmartHopper.Config/Properties/providersResources.resx
@@ -121,4 +121,7 @@
   <data name="mistralai_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mistralai_icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="openai_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\openai_icon.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
