--- a/src/SmartHopper.Components/Properties/Resources.resx
+++ b/src/SmartHopper.Components/Properties/Resources.resx
@@ -136,4 +136,13 @@
   <data name="textgenerate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\textgenerate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="textcheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\textcheck.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="textalter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\textalter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="listgenerate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\listgenerate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
