--- a/src/SmartHopper.Components/Properties/Resources.resx
+++ b/src/SmartHopper.Components/Properties/Resources.resx
@@ -124,9 +124,6 @@
   <data name="ghput" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ghput.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="listalter" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\listalter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="listevaluate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\listevaluate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,16 +136,22 @@
   <data name="textevaluate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\textevaluate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="textalter" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\textalter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="listgenerate" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\listgenerate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="aichat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\aichat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="smarthopper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\smarthopper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="context" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\context.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="components" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\components.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="metrics" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\metrics.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tidyup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tidyup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
