--- a/src/SmartHopper.Components/Properties/Resources.resx
+++ b/src/SmartHopper.Components/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="textgenerate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\textgenerate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="textlistgenerate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\textlistgenerate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="textevaluate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\textevaluate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
