--- a/src/SmartHopper.Components/Properties/Resources.resx
+++ b/src/SmartHopper.Components/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="aichat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\aichat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="aimodels" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\aimodels.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="smarthopper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\smarthopper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
