--- a/src/SmartHopper.Components/Properties/Resources.resx
+++ b/src/SmartHopper.Components/Properties/Resources.resx
@@ -160,4 +160,10 @@
   <data name="tidyup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tidyup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imggenerate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imggenerate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgviewer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgviewer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
